--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -4,8 +4,9 @@
   height: 55px;
   transform: skew(38deg);
   margin-left: 28px;
-  position: relative;
-  bottom: 35px;
+  margin-top: 35px;
+  /* position: absolute; */
+  /* bottom: 35px; */
   /* border: 3px solid rgb(184, 183, 183);
   background: linear-gradient(to right, rgb(243, 248, 7), rgb(220, 72, 155)); */
 }
@@ -13,12 +14,13 @@
 .iconContainer {
   width: 65px;
   height: 65px;
-  /* background-color: red; */
   border-radius: 50%;
-  position: relative;
+  position: absolute;
   left: 36px;
+  bottom: 24px;
   z-index: 1;
-  margin: 5px;
+  border: 1px solid palevioletred;
+  /* background-color: red; */
   /* background: linear-gradient(48deg, rgb(220, 72, 155), rgb(243, 248, 7)); */
 }
 
@@ -30,8 +32,10 @@
 .titleContent {
   display: inline;
   text-transform: uppercase;
-  position: relative;
-  top: -50px;
-  left: -312px;
+  position: absolute;
+  top: 45px;
+  left: 115px;
   color: white;
+  /* background-color: red; */
+  /* border: 4px solid black; */
 }
